@@ -50,7 +50,7 @@ test registry-1.2 {argument parsing for registry command} {win reg} {
 } {1 {bad option "foo": must be broadcast, delete, get, keys, set, type, or values}}
 test registry-1.2a {argument parsing for registry command} {win reg} {
     list [catch {registry -33bit foo} msg] $msg
-} {1 {bad option "-33bit": must be broadcast, delete, get, keys, set, type, or values}}
+} {1 {bad mode "-33bit": must be -32bit or -64bit}}
 
 test registry-1.3 {argument parsing for registry command} {win reg} {
     list [catch {registry d} msg] $msg
@@ -662,13 +662,13 @@ test registry-11.3 {SetValue: failure} \
 
 test registry-12.1 {BroadcastValue} -constraints {win reg} -body {
     registry broadcast
-} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout millisecs?\""
+} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout milliseconds?\""
 test registry-12.2 {BroadcastValue} -constraints {win reg} -body {
     registry broadcast "" -time
-} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout millisecs?\""
+} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout milliseconds?\""
 test registry-12.3 {BroadcastValue} -constraints {win reg} -body {
     registry broadcast "" - 500
-} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout millisecs?\""
+} -returnCodes error -result "wrong # args: should be \"registry broadcast keyName ?-timeout milliseconds?\""
 test registry-12.4 {BroadcastValue} -constraints {win reg} -body {
     registry broadcast {Environment}
 } -result {1 0}
