@@ -4,6 +4,11 @@
 	floating point number until it is actually used. (This change avoids
 	a bogus syslog message regarding a 'floating point software assist
 	fault' on SGI systems.)
+
+	* library/reg/pkgIndex.tcl:	[TIP #362]: Fixed first round of
+	* tests/registry.test:		bugs resulting from the recent commits
+	* win/tclWinReg.c:		of changes in support of the referenced
+					TIP.
 	
 2010-03-31  Donal K. Fellows  <dkf@users.sf.net>
 
